--- a/app/globals.css
+++ b/app/globals.css
@@ -3,13 +3,38 @@
 :root {
   --background: #ffffff;
   --foreground: #171717;
-}
 
-@theme inline {
-  --color-background: var(--background);
-  --color-foreground: var(--foreground);
-  --font-sans: var(--font-geist-sans);
-  --font-mono: var(--font-geist-mono);
+  --brand--neutrals--off-white: #faf9fe;
+  --text--default--black--navy-blue: #132964;
+  --brand--color--lime: #b8e91a;
+  --text--default--black-medium: #132974;
+  --text--default--black-light: #9a8ee6;
+  --brand--primary--action: #faf9fe;
+  --brand--neutrals--grey-dark: #d7d2fd;
+  --brand--color--lilac-purple: #9a8ee6;
+  --brand--primary--action-hover: #3e3f416b;
+  --brand--primary--action-pressed: #d7d2fd;
+  --brand--neutrals--transparent: #fff0;
+  --brand--neutrals--off-white-background: #faf9fe;
+  --brand--neutrals--navy-blue: #132964;
+  --brand--color--navy-blue: #132964;
+  --brand--neutrals--card-grey: #ebe8fa;
+  --brand--color--purple-light: #ebe8fa;
+  --brand--neutrals--stroke-grey: #ebe8fa;
+  --brand--color--lime-light: #f1fbd1;
+  --darker-light-grey\<deleted\|variable-26c1331e\>: #eeeded;
+  --dark-blue\<deleted\|variable-47274d42\>: #0e2244;
+  --brand--color--magenta-light: #f7d1e9;
+  --untitled-ui--primary600\<deleted\|variable-c514c1b4\>: #162b4c;
+  --untitled-ui--gray600\<deleted\|variable-10a0cd12\>: #475467;
+  --untitled-ui--gray500\<deleted\|variable-68f29e84\>: #667085;
+  --brand--color--magenta: #d91892;
+  --brand--color--blue-light: #d0d4e0;
+  --untitled-ui--gray400\<deleted\|variable-b339bef7\>: #98a2b3;
+  --untitled-ui--gray700\<deleted\|variable-d4f37b50\>: #344054;
+  --brand--color--red: #ca4949;
+  --brand--color--red-light: #f8e2e2;
+  --person-background: #3e3f4100;
 }
 
 @media (prefers-color-scheme: dark) {
@@ -21,6 +46,18 @@
 
 body {
   background: var(--background);
-  color: var(--foreground);
-  font-family: Arial, Helvetica, sans-serif;
+  color: var(--text--default--black-medium);
+  font-family: var(--font-urbanist), var(--font-work-sans), sans-serif;
+}
+
+p,
+span,
+h1,
+h2,
+h3,
+h4,
+h5,
+h6,
+div {
+  cursor: default;
 }
